--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">MobileTest</string>
+    <string name="app_name">MidExam</string>
+    <string name="create">생성</string>
 </resources>
